--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "roots/sage-installer",
+  "name": "indrukwekkend/sage-installer",
   "description": "Sage starter theme installer",
   "keywords": [
     "sage",
